small typo in changelog + new roadmap
git-svn-id: http://svn.code.sf.net/p/oobash/code@466 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.5/docs/Changelog.txt
+++ b/0.39.5/docs/Changelog.txt
@@ -259,7 +259,7 @@
 #    -File: added getLine, delLine, setLine
 #    -Ssh: added diff, diffIgnoreSpaceChange, diffIgnoreBlankLines, 
 #                diffIgnoreSpaceChangeAndBlankLines, copy,
-                 grep, grepIgnoreCase, grepInvertMatch
+#                grep, grepIgnoreCase, grepInvertMatch
 #    -added Script.generator (skeleton):
 #     uses great idea to use pod docs in shell scripts from:
 #     http://bahut.alma.ch/2007/08/embedding-documentation-in-shell-script_16.html
