not ready, but next step for diff methods + small mods
git-svn-id: http://svn.code.sf.net/p/oobash/code@477 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.5/docs/Changelog.txt
+++ b/0.39.5/docs/Changelog.txt
@@ -257,9 +257,7 @@
 #    -many fixes
 # Version:      0.39.5
 #    -File: added getLine, delLine
-#    -Ssh: added diff, diffIgnoreSpaceChange, diffIgnoreBlankLines, 
-#                diffIgnoreSpaceChangeAndBlankLines, copy,
-#                diffFiletree
+#    -Ssh: added diff, diffFiletree
 #                grep, grepIgnoreCase, grepInvertMatch
 #    -added Script.generator (skeleton):
 #     uses great idea to use pod docs in shell scripts from:
