replaceLine instead of setLine
git-svn-id: http://svn.code.sf.net/p/oobash/code@486 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.5/docs/Changelog.txt
+++ b/0.39.5/docs/Changelog.txt
@@ -256,7 +256,7 @@
 #    -changed return values for exceptions, added AuthException
 #    -many fixes
 # Version:      0.39.5
-#    -File: added getLine, delLine, setLine
+#    -File: added getLine, delLine, replaceLine
 #    -Ssh: added diff, diffFiletree
 #                grep, grepIgnoreCase, grepInvertMatch
 #    -added Script.generator (skeleton):
