--- a/0.39.5/docs/Changelog.txt
+++ b/0.39.5/docs/Changelog.txt
@@ -257,6 +257,7 @@
 #    -many fixes
 # Version:      0.39.5
 #    -File: added getLine, delLine, replaceLine
+#    -Process: added getThreads, getChildren
 #    -Ssh: added diff, diffFiletree
 #                grep, grepIgnoreCase, grepInvertMatch
 #    -added Script.generator (skeleton):
