added private functions: __isInteger __isPosInteger __isNegInteger
git-svn-id: http://svn.code.sf.net/p/oobash/code@512 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.6/docs/Changelog.txt
+++ b/0.39.6/docs/Changelog.txt
@@ -270,6 +270,11 @@
 #    -set +errexit (should be default anyway - needed by some private functions) in oobash.source
 #    -added Dependencies: diff
 #    -Fixes
+# Version:      0.39.6
+#    -added File: insertAfterLine, insertBeforeLine
+#    -added Ssh: copy  
+#    -added private functions: __isInteger __isPosInteger __isNegInteger 
+#    -Fixes
 
 #################################################################
 # Features:
