--- a/0.39.6/docs/Changelog.txt
+++ b/0.39.6/docs/Changelog.txt
@@ -274,6 +274,7 @@
 #    -added File: insertAfterLine, insertBeforeLine
 #    -added Ssh: copy  
 #    -added private functions: __isInteger __isPosInteger __isNegInteger 
+#    -small modifications for Script.generator
 #    -Fixes
 
 #################################################################
