--- a/0.39.6/docs/Changelog.txt
+++ b/0.39.6/docs/Changelog.txt
@@ -275,6 +275,7 @@
 #    -added Ssh: copy  
 #    -added private functions: __isInteger __isPosInteger __isNegInteger 
 #    -small modifications for Script.generator
+#    -replaced private __getPointer by a simple __COUNTER__ variable
 #    -Fixes
 
 #################################################################
