--- a/0.39.6/docs/Changelog.txt
+++ b/0.39.6/docs/Changelog.txt
@@ -272,7 +272,7 @@
 #    -Fixes
 # Version:      0.39.6
 #    -added File: insertAfterLine, insertBeforeLine
-#    -added Ssh: copy, doScript
+#    -added Ssh: copy, doFile
 #    -added private functions: __isInteger __isPosInteger
 #    -small modifications for Script.generator
 #    -replaced private __getPointer by a simple __COUNTER__ variable
