doFile --> renamed to execModule + modules directory + example.mod + small roadmap changes
git-svn-id: http://svn.code.sf.net/p/oobash/code@545 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.6/docs/Changelog.txt
+++ b/0.39.6/docs/Changelog.txt
@@ -272,7 +272,7 @@
 #    -Fixes
 # Version:      0.39.6
 #    -added File: insertAfterLine, insertBeforeLine
-#    -added Ssh: copy, doFile
+#    -added Ssh: copy, execModule + module directory + example.mod
 #    -added private functions: __isInteger __isPosInteger
 #    -small modifications for Script.generator
 #    -replaced private __getPointer by a simple __COUNTER__ variable
