--- a/0.39.6/docs/Changelog.txt
+++ b/0.39.6/docs/Changelog.txt
@@ -273,7 +273,7 @@
 # Version:      0.39.6
 #    -added File: insertAfterLine, insertBeforeLine
 #    -added Ssh: copy, execModule + module directory + example.mod
-#    -added private functions: __isInteger __isPosInteger
+#    -added private functions: __isBashInteger __isPosBashInteger
 #    -small modifications for Script.generator
 #    -replaced private __getPointer by a simple __COUNTER__ variable
 #    -Fixes
