--- a/0.39.6/docs/Changelog.txt
+++ b/0.39.6/docs/Changelog.txt
@@ -274,6 +274,7 @@
 #    -added File: insertAfterLine, insertBeforeLine
 #    -added Ssh: copy, execModule + module directory + example.mod
 #    -added private functions: __isBashInteger __isPosBashInteger
+#    + use of __isBashInteger __isPosBashInteger where convenient
 #    -small modifications for Script.generator
 #    -replaced private __getPointer by a simple __COUNTER__ variable
 #    -Fixes
