bold methodnames in manpages
git-svn-id: http://svn.code.sf.net/p/oobash/code@567 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.7/docs/Changelog.txt
+++ b/0.39.7/docs/Changelog.txt
@@ -278,6 +278,9 @@
 #    -small modifications for Script.generator
 #    -replaced private __getPointer by a simple __COUNTER__ variable
 #    -Fixes
+# Version:      0.39.7
+#    -modified Man.generator: now bold methodnames in manpages
+
 
 #################################################################
 # Features:
