new i18n messages for Man.generator 2
git-svn-id: http://svn.code.sf.net/p/oobash/code@580 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.7/locale/it/LC_MESSAGES/oobash.po
+++ b/0.39.7/locale/it/LC_MESSAGES/oobash.po
@@ -94,7 +94,7 @@ msgid "   Please enter one class name and the attributes"
 msgstr "   Inserire il nome della classe e gli attributi"
 
 #: oobash/src/util/Generator.oobash
-msgid "   Please enter one class name"
+msgid "   Please enter one class name or scriptname"
 msgstr "   Inserire il nome della classe o scriptname"
 
 #: oobash/src/util/Generator.oobash:264
