renamed dtaeFormat to localDateFormat
git-svn-id: http://svn.code.sf.net/p/oobash/code@581 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.7/docs/Changelog.txt
+++ b/0.39.7/docs/Changelog.txt
@@ -280,7 +280,11 @@
 #    -Fixes
 # Version:      0.39.7
 #    -modified Man.generator: now bold methodnames in manpages
-#    -added private function: __dateFormat
+#    -added private function: __localDateFormat
+#    -small modifications for Script.generator
+#    -oobash manpages moved to man3
+#    -script manpages go to man1
+#    -Fixes
 
 
 #################################################################
