--- a/0.39.7/locale/de/LC_MESSAGES/oobash.po
+++ b/0.39.7/locale/de/LC_MESSAGES/oobash.po
@@ -171,7 +171,6 @@ msgstr "Tut mir leid, aber der Objektname '$this' ist nicht gültig"
 
 #: oobash/src/lang/String.oobash:46
 msgid "Sorry, objectname '$this' is a keyword"
-
 msgstr "Tut mir leid, aber der Objektname '$this' ist ein Schlüsselwort."
 
 #: oobash/src/lang/String.oobash:59
@@ -198,10 +197,6 @@ msgstr " Bitte installieren Sie die fehlenden Pakete um volle Funktionalität zu
 msgid " Could not change MANPATH!"
 msgstr " Konnte MANPATH nicht anpassen!"
 
-#: oobash/src/admin/SshHost.oobash
-# msgid "Sorry, no passwordless authentication possible with SshHost '$name' and user '$user'"
-# msgstr "Tut mir leid, passwortlose Authentifizierung auf SshHost '$name' nicht möglich"
-
 #: oobash/src/util/Generator.oobash:
 msgid "   Please enter one script name"
 msgstr "   Bitte geben Sie einen Skriptnamen ein"
@@ -209,3 +204,7 @@ msgstr "   Bitte geben Sie einen Skriptnamen ein"
 #: oobash/src/util/Generator.oobash:
 msgid "   Crash! Script already exists."
 msgstr "   Abbruch ! Skript existiert bereits."
+
+#: oobash/src/util/Generator.oobash
+msgid "     You can find the script skeleton here:"
+msgstr "     Sie können die Skriptvorlage hier finden:"
