small changes for: i18n example script and i18n docs
git-svn-id: http://svn.code.sf.net/p/oobash/code@594 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.7/docs/Changelog.txt
+++ b/0.39.7/docs/Changelog.txt
@@ -289,6 +289,7 @@
 #    -oobash manpages moved/go to man3
 #    -script manpages go to man1
 #    -new dependencies: -pod2man, -pod2usage
+#    -i18n example script in docs/examples
 #    -Fixes
 
 
