renamed File lenth to fileLength
git-svn-id: http://svn.code.sf.net/p/oobash/code@600 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39.7/docs/Changelog.txt
+++ b/0.39.7/docs/Changelog.txt
@@ -285,6 +285,7 @@
 #    -modified Class.generator to write a file in the myClassFiles directory
 #    -oobash.source now tries to source all oobash files in the myClassFiles directory
 #    -File: added methods: -indexOfExtension -indexOfLastSeparator
+#    -File: renamed lengt to fileLength
 #    -added private function: __localDateFormat
 #    -oobash manpages moved/go to man3
 #    -script manpages go to man1
