--- a/0.39.7/docs/Changelog.txt
+++ b/0.39.7/docs/Changelog.txt
@@ -284,8 +284,8 @@
 #    -small cleanup for Script.generator
 #    -modified Class.generator to write a file in the myClassFiles directory
 #    -oobash.source now tries to source all oobash files in the myClassFiles directory
-#    -File: added methods: -indexOfExtension -indexOfLastSeparator
-#    -File: renamed lengt to fileLength
+#    -File: added methods: -indexOfExtension -indexOfLastSeparator -getUser -getGroup
+#    -File: renamed length to fileLength
 #    -added private function: __localDateFormat
 #    -oobash manpages moved/go to man3
 #    -script manpages go to man1
