--- a/oobash/locale/it/LC_MESSAGES/oobash.po
+++ b/oobash/locale/it/LC_MESSAGES/oobash.po
@@ -170,5 +170,5 @@ msgid " Could not change MANPATH!"
 msgstr " Impossibile modificare MANPATH!"
 
 #: oobash/src/util/Generator.oobash:
-msgid "   Please enter one scriptname"
-msgstr "   Inserire il nome della nomescript"
+msgid "   Please enter one scriptname."
+msgstr "   Inserire il nome della nomescript."
