renamed __COUNTER__ to __OBJCOUNTER__
git-svn-id: http://svn.code.sf.net/p/oobash/code@613 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -292,7 +292,8 @@
 #    -new dependencies: -pod2man, -pod2usage
 #    -i18n example script in docs/examples
 #    -Fixes
-
+# Version:      0.39.8
+#    -renamed __COUNTER__ to __OBJCOUNTER__ (better naming i think)
 
 #################################################################
 # Features:
