--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -294,6 +294,7 @@
 #    -Fixes
 # Version:      0.39.8
 #    -renamed __COUNTER__ to __OBJCOUNTER__ (better naming i think)
+#    -Fixes
 
 #################################################################
 # Features:
