--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -293,6 +293,9 @@
 #    -i18n example script in docs/examples
 #    -Fixes
 # Version:      0.39.8
+#    -Script.generator now delivers a version() function for the scripts
+#     and uses an idea to parse long options from:
+#     http://stackoverflow.com/questions/402377/using-getopts-in-bash-shell-script-to-get-long-and-short-command-line-options/7680682#7680682
 #    -renamed __COUNTER__ to __OBJCOUNTER__ (better naming i think)
 #    -Fixes
 
