added to File: deleteRecursively
git-svn-id: http://svn.code.sf.net/p/oobash/code@630 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -294,6 +294,7 @@
 #    -Fixes
 # Version:      0.39.8
 #    -added to String: charCodeAt
+#    -added to File: deleteRecursively
 #    -Script.generator now delivers a version() function for the scripts
 #     and uses an idea to parse long options from:
 #     http://stackoverflow.com/questions/402377/using-getopts-in-bash-shell-script-to-get-long-and-short-command-line-options/7680682#7680682
