added to dependencies: podselect
git-svn-id: http://svn.code.sf.net/p/oobash/code@632 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -298,6 +298,7 @@
 #    -Script.generator now delivers a version() function for the scripts
 #     and uses an idea to parse long options from:
 #     http://stackoverflow.com/questions/402377/using-getopts-in-bash-shell-script-to-get-long-and-short-command-line-options/7680682#7680682
+#    -new dependency: -podselect
 #    -renamed __COUNTER__ to __OBJCOUNTER__ (better naming i think)
 #    -Fixes
 
