__stat for script functions
git-svn-id: http://svn.code.sf.net/p/oobash/code@639 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -295,8 +295,9 @@
 # Version:      0.39.8
 #    -added to String: charCodeAt
 #    -added to File: deleteRecursively
+#    -added private function: __stat
 #    -Script.generator now delivers a version() function for the scripts
-#     and uses an idea to parse long options from:
+#     and uses an idea to parse long/short options from:
 #     http://stackoverflow.com/questions/402377/using-getopts-in-bash-shell-script-to-get-long-and-short-command-line-options/7680682#7680682
 #    -new dependency: -podselect
 #    -renamed __COUNTER__ to __OBJCOUNTER__ (better naming i think)
