--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -293,7 +293,7 @@
 #    -i18n example script in docs/examples
 #    -Fixes
 # Version:      0.39.8
-#    -added to String: charCodeAt, containsOnly, containsNone
+#    -added to String: charCodeAt, containsOnly, containsNone, indexOfDifference
 #    -added to File: deleteRecursively
 #    -added private function: __stat
 #    -Script.generator now delivers a version() function for the scripts
