--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -295,8 +295,7 @@
 # Version:      0.39.8
 #    -added to String: charCodeAt, containsOnly, containsNone, indexOfDifference
 #    -added to File: deleteRecursively
-#    -added private function: __stack, __getLoggingPropertiesFileNameByCaller,
-#                             __isXTRACEFDAvailable, __getFileBase
+#    -added private function: __stack, __isXTRACEFDAvailable, __getFileBase
 #    -Script.generator now delivers a version() function for the scripts
 #     and uses an idea to parse long/short options from:
 #     http://stackoverflow.com/questions/402377/using-getopts-in-bash-shell-script-to-get-long-and-short-command-line-options/7680682#7680682
