PrivateLogging.oobash: __getLoggingTimestamp, __getFreeFD
git-svn-id: http://svn.code.sf.net/p/oobash/code@672 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -305,6 +305,11 @@
 #    if logging is active in this framework (still not possible), then eg /tmp/myScript.sh needs a log4-myScript.properties 
 #    file in /tmp for an active logging.
 #    -Fixes
+# Version:      0.39.9
+#    -Added PrivateLogging.oobash to log4oobash
+#    -Added to PrivateLogging.oobash: __getLoggingTimestamp, __getFreeFD
+#    -moved __isXTRACEFDAvailable from Private to PrivateLogging
+#    -Fixes
 
 #################################################################
 # Features:
