forgotten __setPS4 in Changelog
git-svn-id: http://svn.code.sf.net/p/oobash/code@677 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -307,9 +307,9 @@
 #    -Fixes
 # Version:      0.39.9
 #    -Added PrivateLogging.oobash to log4oobash
-#    -Added to PrivateLogging.oobash: __getLoggingTimestamp, __getFreeFD
+#    -Added to PrivateLogging.oobash: __getLoggingTimestamp, __getFreeFD, __setPS4
 #    -moved __isXTRACEFDAvailable from Private to PrivateLogging
-#    -Fixes
+#    -Fixes and small doc improvements
 
 #################################################################
 # Features:
