--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -306,9 +306,10 @@
 #    file in /tmp for an active logging.
 #    -Fixes
 # Version:      0.39.9
-#    -Added PrivateLogging.oobash to log4oobash
+#    -Added PrivateLogging.oobash to log4oobash package
 #    -Added to PrivateLogging.oobash: __getLoggingTimestamp, __getFreeFD, __setPS4
 #    -moved __isXTRACEFDAvailable from Private to PrivateLogging
+#    -Added to Private: __isatty
 #    -Fixes and small doc improvements
 
 #################################################################
