mit license now in script manpages too
git-svn-id: http://svn.code.sf.net/p/oobash/code@681 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -310,7 +310,7 @@
 #    -Added to PrivateLogging.oobash: __getLoggingTimestamp, __getFreeFD, __setPS4
 #    -moved __isXTRACEFDAvailable from Private to PrivateLogging
 #    -Added to Private: __isatty
-#    -Fixes and small doc improvements
+#    -Fixes and small improvements
 
 #################################################################
 # Features:
