--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -310,6 +310,7 @@
 #    -Added to PrivateLogging.oobash: __getLoggingTimestamp, __getFreeFD, __setPS4
 #    -moved __isXTRACEFDAvailable from Private to PrivateLogging
 #    -Added to Private: __isatty
+#    -Added to File: lastChanged, lastAccessed, setLastAccessed
 #    -Fixes and small improvements
 
 #################################################################
