mini change in changelog
git-svn-id: http://svn.code.sf.net/p/oobash/code@690 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -306,8 +306,8 @@
 #    file in /tmp for an active logging.
 #    -Fixes
 # Version:      0.39.9
-#    -Added PrivateLogging.oobash to log4oobash package
-#    -Added to PrivateLogging.oobash: __getLoggingTimestamp, __getFreeFD, __setPS4
+#    -Added file PrivateLogging.oobash to log4oobash package
+#    -Added to PrivateLogging: __getLoggingTimestamp, __getFreeFD, __setPS4
 #    -Added to Private: __isatty
 #    -Added to File: lastChanged, lastAccessed, setLastAccessed
 #    -moved __isXTRACEFDAvailable from Private to PrivateLogging
