--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -308,7 +308,7 @@
 # Version:      0.39.9
 #    -Added file PrivateLogging.oobash to log4oobash package
 #    -Added to PrivateLogging: __getLoggingTimestamp, __getFreeFD, __setPS4
-#    -Added to Private: __isatty
+#    -Added to Private: __isatty, __terminalSupportsColours
 #    -Added to File: lastChanged, lastAccessed, setLastAccessed
 #    -moved __isXTRACEFDAvailable from Private to PrivateLogging
 #    -Fixes and small improvements
