File: untested versions of isOlderThan, isNewerThan, touch + missing docs
git-svn-id: http://svn.code.sf.net/p/oobash/code@705 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -309,7 +309,7 @@
 #    -Added file PrivateLogging.oobash to log4oobash package
 #    -Added to PrivateLogging: __getLoggingTimestamp, __getFreeFD, __setPS4
 #    -Added to Private: __isatty, __terminalSupportsColours
-#    -Added to File: lastChanged, lastAccessed, setLastAccessed
+#    -Added to File: lastChanged, lastAccessed, setLastAccessed, touch, isOlderThan, isNewerThan
 #    -moved __isXTRACEFDAvailable from Private to PrivateLogging
 #    -new Array __OptionalVars__: optional varaibles, at the moment:
 #     __QUIET__ __AUTHOR__ __EMAIL__ __COMPANY__
