--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -308,7 +308,7 @@
 # Version:      0.39.9
 #    -Added file PrivateLogging.oobash to log4oobash package
 #    -Added to PrivateLogging: __getLoggingTimestamp, __getFreeFD, __setPS4
-#    -Added to Private: __isatty, __terminalSupportsColours
+#    -Added to Private: __isatty, __terminalSupportsColours, __slashCheck
 #    -Added to File: lastChanged, lastAccessed, setLastAccessed, touch, isOlderThan, isNewerThan
 #    -moved __isXTRACEFDAvailable from Private to PrivateLogging
 #    -new Array __OptionalVars__: optional varaibles, at the moment:
