__getLoggingTimestamp, __getFreeFD, __setPS4 in Private now + roadmap change
git-svn-id: http://svn.code.sf.net/p/oobash/code@716 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -306,11 +306,9 @@
 #    file in /tmp for an active logging.
 #    -Fixes
 # Version:      0.39.9
-#    -Added file PrivateLogging.oobash to log4oobash package
-#    -Added to PrivateLogging: __getLoggingTimestamp, __getFreeFD, __setPS4
-#    -Added to Private: __isatty, __terminalSupportsColours, __slashCheck
+#    -Added to Private: __isatty, __terminalSupportsColours, __slashCheck, __getLoggingTimestamp, 
+#                       __getFreeFD, __setPS4
 #    -Added to File: lastChanged, lastAccessed, setLastAccessed, touch, isOlderThan, isNewerThan
-#    -moved __isXTRACEFDAvailable from Private to PrivateLogging
 #    -new Array __OptionalVars__: optional varaibles, at the moment:
 #     __QUIET__ __AUTHOR__ __EMAIL__ __COMPANY__
 #    -All generators try to use the following optional variables, if you set them:
