--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -314,6 +314,9 @@
 #    -All generators try to use the following optional variables, if you set them:
 #    __AUTHOR__ __COMPANY__ __EMAIL__
 #    -Fixes and small improvements
+# Version:      0.40
+#    -Fixes and small improvements
+
 
 #################################################################
 # Features:
