support for sticky bit, setuid and setgid in __posixFilePermissionsConverter
git-svn-id: http://svn.code.sf.net/p/oobash/code@728 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -315,6 +315,7 @@
 #    __AUTHOR__ __COMPANY__ __EMAIL__
 #    -Fixes and small improvements
 # Version:      0.40
+#    -support for sticky bit, setuid and setgid in __posixFilePermissionsConverter
 #    -Fixes and small improvements
 
 
