renamed __posixFilePermissionsConverter to __posixFilePermission2Octal
git-svn-id: http://svn.code.sf.net/p/oobash/code@731 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -316,7 +316,8 @@
 #    -Fixes and small improvements
 # Version:      0.40
 #    -Added to File: setuid setgid setStickyBit
-#    -support for sticky bit, setuid and setgid in __posixFilePermissionsConverter
+#    -renamed __posixFilePermissionsConverter to __posixFilePermission2Octal
+#    -support for sticky bit, setuid and setgid in __posixFilePermission2Octal
 #    -Fixes and small improvements
 
 
