--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -315,6 +315,7 @@
 #    __AUTHOR__ __COMPANY__ __EMAIL__
 #    -Fixes and small improvements
 # Version:      0.40
+#    -Added to Private: __getAttributeFromObjectByName
 #    -Added to File: setuid setgid setStickyBit
 #    -renamed __posixFilePermissionsConverter to __posixFilePermission2Octal
 #    -support for sticky bit, setuid and setgid in __posixFilePermission2Octal
