--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -315,6 +315,8 @@
 #    __AUTHOR__ __COMPANY__ __EMAIL__
 #    -Fixes and small improvements
 # Version:      0.40
+#    -Added to String: String.fromCharCode (if bash 4 has at least minor version number 2)
+#                      if bash is too old this function will not be sourced
 #    -Added to Private: __getAttributeFromObjectByName
 #    -Added to File: setuid setgid setStickyBit
 #    -renamed __posixFilePermissionsConverter to __posixFilePermission2Octal
