renamed __terminalSupportsColours to __terminalSupportsColors + math mini
git-svn-id: http://svn.code.sf.net/p/oobash/code@742 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -320,6 +320,7 @@
 #    -Added to Private: __getAttributeFromObjectByName, __charCode
 #    -Added to File: setuid setgid setStickyBit
 #    -renamed __posixFilePermissionsConverter to __posixFilePermission2Octal
+#    -renamed __terminalSupportsColours to __terminalSupportsColors
 #    -support for sticky bit, setuid and setgid in __posixFilePermission2Octal
 #    -Fixes and small improvements
 
