mini doc changes
git-svn-id: http://svn.code.sf.net/p/oobash/code@743 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -315,13 +315,14 @@
 #    __AUTHOR__ __COMPANY__ __EMAIL__
 #    -Fixes and small improvements
 # Version:      0.40
-#    -Added to String: String.fromCharCode (available only if bash 4 has at least minor version number 2
-#                      if bash is older this function will not be sourced)
+#    -Added to String: String.fromCharCode (available only if bash4 has at least minor version number 2.
+#                      If bash is older, this function is not available)
 #    -Added to Private: __getAttributeFromObjectByName, __charCode
 #    -Added to File: setuid setgid setStickyBit
 #    -renamed __posixFilePermissionsConverter to __posixFilePermission2Octal
 #    -renamed __terminalSupportsColours to __terminalSupportsColors
 #    -support for sticky bit, setuid and setgid in __posixFilePermission2Octal
+#    -Math.random works without bc now
 #    -Fixes and small improvements
 
 
