added hasUidBit hasGidBit to File
git-svn-id: http://svn.code.sf.net/p/oobash/code@749 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -318,7 +318,7 @@
 #    -Added to String: String.fromCharCode (available only if bash4 has at least minor version number 2.
 #                      If bash is older, this function is not available)
 #    -Added to Private: __getAttributeFromObjectByName, __charCode
-#    -Added to File: setuid setgid setStickyBit
+#    -Added to File: setuid, setgid, setStickyBit, hasUidBit, hasGidBit
 #    -renamed __posixFilePermissionsConverter to __posixFilePermission2Octal
 #    -renamed __terminalSupportsColours to __terminalSupportsColors
 #    -support for sticky bit, setuid and setgid in __posixFilePermission2Octal
