support for cyrillic characters
git-svn-id: http://svn.code.sf.net/p/oobash/code@769 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -323,6 +323,7 @@
 #    -renamed __terminalSupportsColours to __terminalSupportsColors
 #    -support for sticky bit, setuid and setgid in __posixFilePermissionToOctal
 #    -Math.random works without bc now
+#    -Support for cyrillic characters
 #    -Fixes and small improvements
 
 
