renamed __stackOrHelp to __handleErrorMessage + removed __stack function
git-svn-id: http://svn.code.sf.net/p/oobash/code@776 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -321,6 +321,8 @@
 #    -Added to File: setuid, setgid, setStickyBit, hasUidBit, hasGidBit
 #    -renamed __posixFilePermissionsConverter to __posixFilePermissionToOctal
 #    -renamed __terminalSupportsColours to __terminalSupportsColors
+#    -renamed __stackOrHelp to __handleErrorMessage
+#    -removed __stack function
 #    -support for sticky bit, setuid and setgid in __posixFilePermissionToOctal
 #    -Math.random works without bc now
 #    -Support for cyrillic characters
