--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -317,7 +317,7 @@
 # Version:      0.40
 #    -Added to String: String.fromCharCode (available only if bash4 has at least minor version number 2.
 #                      If bash is older, this function is not available)
-#    -Added to Private: __getAttributeFromObjectByName, __charCode
+#    -Added to Private: __getAttributeFromObjectByName, __charCode, getObjectPointer
 #    -Added to File: setuid, setgid, setStickyBit, hasUidBit, hasGidBit
 #    -renamed __posixFilePermissionsConverter to __posixFilePermissionToOctal
 #    -renamed __terminalSupportsColours to __terminalSupportsColors
@@ -326,7 +326,7 @@
 #    -support for sticky bit, setuid and setgid in __posixFilePermissionToOctal
 #    -Math.random works without bc now
 #    -Support for cyrillic characters
-#    -Fixes and small improvements
+#    -Fixes, refactoring and small improvements
 
 
 #################################################################
